# switchgen

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  pyproject.toml
.github/workflows/: ci.yml
src/switchgen/: __init__.py  __main__.py  app.py
src/switchgen/core/: __init__.py  comfy_init.py  config.py  downloader.py  engine.py  logging.py  models.py  queue.py  workflows.py
src/switchgen/ui/: main_window.py  model_dialog.py
src/switchgen/ui/widgets/: __init__.py  bottom_bar.py  control_panel.py  preview_panel.py
tests/: conftest.py
tests/integration/: test_workflow_building.py
tests/unit/: test_config.py  test_downloader.py  test_engine.py  test_models.py  test_queue.py  test_workflows.py
