[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchgen"
version = "0.1.0"
description = "Image and video generator using ComfyUI as a library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SwitchSides" }
]
dependencies = [
    "PyGObject>=3.42",
    "Pillow>=10.0",
    "psutil>=5.9",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
switchgen = "switchgen.__main__:main"

[project.gui-scripts]
switchgen-gui = "switchgen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/switchgen"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
